fixed spacing of sign up button

--- a/wp-content/plugins/buddypress/bp-themes/bp-default/jschwarz_custom_style.css
+++ b/wp-content/plugins/buddypress/bp-themes/bp-default/jschwarz_custom_style.css
@@ -7759,7 +7759,7 @@ float: left;
 clear: left;
 position: relative;
 top: -2px;
-left: 264px;
+left: 253px;
 height: 32px;
 }
 
